--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
     "name": "barnes-focus-lambda",
     "version": "0.1.0",
     "private": true,
@@ -27,7 +27,11 @@
         "multer": "^1.4.4",
         "nodemailer": "^6.7.7",
         "pg": "^8.7.3",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-router-dom": "^5.1.2",
         "serverless-http": "^3.0.1",
+        "styled-components": "^4.3.2",
         "vuforia-api": "^0.3.2"
     },
     "scripts": {
@@ -45,7 +49,8 @@
         "deploy:dev": "npx serverless deploy --verbose --stage dev",
         "deploy:prod": "npx serverless deploy --verbose --stage prod",
         "prisma:generate": "prisma generate",
-        "bundles": "node dist/server/bundle.js"
+        "bundles": "node dist/server/bundle.js",
+        "minify": "npx node-prune && npx modclean"
     },
     "eslintConfig": {
         "extends": [
@@ -113,19 +118,16 @@
         "prettier": "^2.6.2",
         "prisma": "^3.14.0",
         "query-string": "6.8.1",
-        "react": "^16.8.6",
         "react-addons-css-transition-group": "^15.6.2",
         "react-alice-carousel": "^2.7.0",
         "react-compare-slider": "^2.2.0",
         "react-crossfade-image": "^1.1.1",
         "react-device-detect": "^2.2.2",
-        "react-dom": "^16.8.6",
         "react-gsap": "1.2.0",
         "react-modal": "3.3.2",
         "react-player": "^2.11.0",
         "react-pose": "4.0.5",
         "react-progressive-image": "0.6.0",
-        "react-router-dom": "^5.1.2",
         "react-scripts": "5.0.1",
         "react-scrollmagic": "2.1.0",
         "react-slick": "0.23.2",
@@ -140,7 +142,6 @@
         "scrollmagic-plugin-gsap": "1.0.3",
         "serverless": "^3.22.0",
         "slick-carousel": "1.8.1",
-        "styled-components": "4.3.2",
         "ts-jest": "^29.0.3",
         "tslib": "^2.6.2",
         "typescript": "^4.6.4"
